Color spill bug #45647

Closed
opened 2015-08-01 20:11:28 +02:00 by Alexey · 10 comments

System Information
windows7 64
ASUS ATI Radeon HD6870

Blender Version
Broken: (All)
Worked: (None)

Short description of error
we have mess in "limit channel" buttons
R1.png
R2.png
R3.png
R4.png
total.png
PS.png
Exact steps for others to reproduce the error
color spill.blend
open and repeat my test

System Information windows7 64 ASUS ATI Radeon HD6870 Blender Version Broken: (All) Worked: (None) **Short description of error** we have mess in "limit channel" buttons ![R1.png](https://archive.blender.org/developer/F216923/R1.png) ![R2.png](https://archive.blender.org/developer/F216925/R2.png) ![R3.png](https://archive.blender.org/developer/F216927/R3.png) ![R4.png](https://archive.blender.org/developer/F216929/R4.png) ![total.png](https://archive.blender.org/developer/F216931/total.png) ![PS.png](https://archive.blender.org/developer/F216933/PS.png) **Exact steps for others to reproduce the error** [color spill.blend](https://archive.blender.org/developer/F216935/color_spill.blend) open and repeat my test
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @Inwader77

Added subscriber: @Inwader77
Author

Despill channel blue; Lim channel Blue
This combination only is working properly

Despill channel blue; Lim channel Blue This combination only is working properly
Member

Added subscriber: @Blendify

Added subscriber: @Blendify
Member

Added subscribers: @Sergey, @Jeroen-Bakker, @JulianEisel

Added subscribers: @Sergey, @Jeroen-Bakker, @JulianEisel
Member

Yeah, also think something weird is going on here. Original node is by @Jeroen-Bakker, but maybe @Sergey can have a look?

Yeah, also think something weird is going on here. Original node is by @Jeroen-Bakker, but maybe @Sergey can have a look?
Sergey Sharybin was assigned by Julian Eisel 2015-08-03 22:44:02 +02:00
Member

Hi,

I didn't try it, but can anyone reproduce it in Blender 2.63? In Blender 2.64 we copied this node. If it is not reproduceable in 2.63, the migration of that node went wrong.
Otherwise we should perhaps look for other algorithms.

The original functionality was written back in 2.43 around Februari 2007 (http://archive.blender.org/development/release-logs/blender-243/)

Regards!

Hi, I didn't try it, but can anyone reproduce it in Blender 2.63? In Blender 2.64 we copied this node. If it is not reproduceable in 2.63, the migration of that node went wrong. Otherwise we should perhaps look for other algorithms. The original functionality was written back in 2.43 around Februari 2007 (http://archive.blender.org/development/release-logs/blender-243/) Regards!
Author

In #45647#325998, @Jeroen-Bakker wrote:
Hi,

I didn't try it, but can anyone reproduce it in Blender 2.63? In Blender 2.64 we copied this node. If it is not reproduceable in 2.63, the migration of that node went wrong.
Otherwise we should perhaps look for other algorithms.

The original functionality was written back in 2.43 around Februari 2007 (http://archive.blender.org/development/release-logs/blender-243/)

Regards!

i was repeat it in 2.63, this bug is active

> In #45647#325998, @Jeroen-Bakker wrote: > Hi, > > I didn't try it, but can anyone reproduce it in Blender 2.63? In Blender 2.64 we copied this node. If it is not reproduceable in 2.63, the migration of that node went wrong. > Otherwise we should perhaps look for other algorithms. > > The original functionality was written back in 2.43 around Februari 2007 (http://archive.blender.org/development/release-logs/blender-243/) > > Regards! i was repeat it in 2.63, this bug is active

This issue was referenced by cae25ff240

This issue was referenced by cae25ff2404cf197b3bf0ca2271880d18dfa4660

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
6 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#45647
No description provided.