Fix T45647: Incorrect results w/ color spill node